# mal-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: core.cpp  defer.hpp  evaluator.cpp  functions.h  hashes.h  jpcre2.hpp  linenoise.c  linenoise.h  main.cpp  mal.cpp  mal.h  printer.cpp  reader.cpp
test/: basic_repl.cpp  eval.cpp  mal_core.cpp  mal_data.cpp  test.lsp
